[Chore]:Add nginx scripts.

--- a/nginx/nginx.bd.conf
+++ b/nginx/nginx.bd.conf
@@ -28,7 +28,11 @@ http {
     #gzip  on;
 
     upstream ci {
-        server localhost:8080;
+        server localhost:9000;
+    }
+
+    upstream harbor {
+        server localhost:9001;
     }
 
     server {
@@ -44,6 +48,10 @@ http {
 
         location /ci/ {
             proxy_pass    http://ci/;
+        }
+
+        location /harbor/ {
+            proxy_pass    http://harbor/;
         }
     }
 }
