--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     container_name: nginx
     restart: always
     ports:
-      - '80:80'
+      - '9003:80'
     volumes:
-      - '~/data/nginx.conf:/etc/nginx/nginx.conf'
+      - '~/data/nginx_home/nginx.conf:/etc/nginx/nginx.conf'
