--- a/nginx/config/etc/nginx/nginx.conf
+++ b/nginx/config/etc/nginx/nginx.conf
@@ -1,15 +1,11 @@
-
-user  nginx;
-worker_processes  1;
-
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
-
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+pid       /var/run/nginx.pid;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
-
 
 http {
     include       /etc/nginx/mime.types;
@@ -19,14 +15,13 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log  /var/log/nginx/access.log main;
 
-    sendfile        on;
-    #tcp_nopush     on;
+    sendfile  on;
 
-    keepalive_timeout  65;
+    keepalive_timeout 65;
 
-    #gzip  on;
+    #gzip on;
 
     include /etc/nginx/conf.d/*.conf;
 }
