--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -7,4 +7,6 @@ services:
     ports:
       - '9003:80'
     volumes:
-      - '~/data/nginx_home/nginx.conf:/etc/nginx/nginx.conf'
+      - "./config/etc/nginx/nginx.conf:/etc/nginx/nginx.conf"
+      - "./config/etc/nginx/conf.d/:/etc/nginx/conf.d/"
+      - "./web/:/usr/share/nginx/html/"
