--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   nginx:
     image: 'nginx:latest'
-    container_name: nginx
+    container_name: web
     restart: always
     ports:
       - '9003:80'
