--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -11,3 +11,4 @@ services:
       - '~/data/jenkins_home:/var/jenkins_home'
       - '/var/run/docker.sock:/var/run/docker.sock'
       - '/usr/bin/docker:/usr/bin/docker'
+      - '/home/ec2-user/code/LeanEngineOps/nginx/web:/lean-ui'
